--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="col">
 
-            <a href="" class="link ">
+            <a href="./pages/akkar/index.html" class="link ">
                 <div class="" style="max-width: 28rem;">
                     <img src="./assets/akkar/home-icon.png" class="card-img-top"  alt="...">
                     <div class="card-body"> 
