--- a/pages/akkar/index.html
+++ b/pages/akkar/index.html
@@ -29,26 +29,19 @@
 </nav>
         <div style="margin: 50px;"></div>
         <div class="container">
-            <img src="../../assets/wellbeing/details/Wellbeing-01.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-02.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-03.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-04.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-05.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-06.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-07.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-08.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-09.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-10.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-11.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-12.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-13.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-14.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-15.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-16.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-17.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-18.jpg" alt="" srcset="" style="max-width: 100%;">
-       <img src="../../assets/wellbeing/details/Wellbeing-19.jpg" alt="" srcset="" style="max-width: 100%;">
-
+            <img src="../../assets/akkar/details/akkar-01.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-02.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-03.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-04.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-05.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-06.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-07.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-08.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-09.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-10.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-11.jpg" alt="" srcset="" style="max-width: 100%;">
+       <img src="../../assets/akkar/details/Akkar_Behance_project-12.jpg" alt="" srcset="" style="max-width: 100%;">
+       
 
         </div>
        
@@ -68,13 +61,12 @@
 <div class="container text-center">
     <div class="row "style="padding-bottom: 3em;">
         <div class="col">
-
-            <a href="../akkar/index.html" class="link ">
+            <a href="../wellbeing/index.html" class="link ">
                 <div class="" style="max-width: 28rem;">
-                    <img src="../../assets/akkar/home-icon.png" class="card-img-top"  alt="...">
+                    <img src="../../assets/wellbeing/home-icon.png" class="card-img-top"  alt="...">
                     <div class="card-body"> 
                       <p class="card-text fontfamily text-start"> 
-                        Akkar<span class="thin faint ">- Brand Identity Design </span></p>
+                        Wellbeing<span class="thin faint ">- Brand Identity Design </span></p>
                     </div>
                   </div>
             </a>
