major change 4 pages

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <div class="row " style="padding-bottom: 3em;">
             <div class="col">
-                <a href="" class="link ">
+                <a href="./pages/iwa/index.html" class="link ">
                     <div class="" style="max-width: 28rem;">
                         <img src="./assets/iwa/home-icon.png" class="card-img-top"  alt="...">
                         <div class="card-body"> 
@@ -131,7 +131,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="" class="link ">
+                <a href="./pages/icbu/index.html" class="link ">
                     <div class="" style="max-width: 28rem;">
                         <img src="./assets/icbu/home-icon.png" class="card-img-top"  alt="...">
                         <div class="card-body"> 
@@ -145,7 +145,7 @@
 
             <div class="row " style="padding-bottom: 3em;">
                 <div class="col">
-                    <a href="" class="link ">
+                    <a href="./pages/fixire/index.html" class="link ">
                         <div class="" style="max-width: 28rem;">
                             <img src="./assets/fixire/home-icon.png" class="card-img-top"  alt="...">
                             <div class="card-body"> 
@@ -157,7 +157,7 @@
                 </div>
                 <div class="col">
         
-                    <a href="" class="link ">
+                    <a href="./pages/carolina/index.html" class="link ">
                         <div class="" style="max-width: 28rem;">
                             <img src="./assets/carolina/home-icon.png" class="card-img-top"  alt="...">
                             <div class="card-body"> 
