--- a/pages/akkar/index.html
+++ b/pages/akkar/index.html
@@ -73,7 +73,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="" class="link ">
+            <a href="../iwa/index.html" class="link ">
                 <div class="" style="max-width: 28rem;">
                     <img src="../../assets/iwa/home-icon.png" class="card-img-top"  alt="...">
                     <div class="card-body"> 
@@ -90,7 +90,7 @@
         <div class="row " style="padding-bottom: 3em;">
             
             <div class="col">
-                <a href="" class="link ">
+                <a href="../icbu/index.html" class="link ">
                     <div class="" style="max-width: 28rem;">
                         <img src="../../assets/icbu/home-icon.png" class="card-img-top"  alt="...">
                         <div class="card-body"> 
@@ -101,7 +101,7 @@
                 </a>
             </div>
             <div class="col">
-                <a href="" class="link ">
+                <a href="../fixire/index.html" class="link ">
                     <div class="" style="max-width: 28rem;">
                         <img src="../../assets/fixire/home-icon.png" class="card-img-top"  alt="...">
                         <div class="card-body"> 
@@ -115,7 +115,7 @@
 
             <div class="row " style="padding-bottom: 3em;">  
                 <div class="col">
-                    <a href="" class="link ">
+                    <a href="../carolina/index.html" class="link ">
                         <div class="" style="max-width: 28rem;">
                             <img src="../../assets/carolina/home-icon.png" class="card-img-top"  alt="...">
                             <div class="card-body"> 
