--- a/pages/fixire/index.html
+++ b/pages/fixire/index.html
@@ -119,7 +119,7 @@
             <div class="row " style="padding-bottom: 3em;">  
                 
                 <div class="col">
-                    <a href="" class="link ">
+                    <a href="../carolina/index.html" class="link ">
                         <div class="" style="max-width: 28rem;">
                             <img src="../../assets/carolina/home-icon.png" class="card-img-top"  alt="...">
                             <div class="card-body"> 
