--- a/pages/akkar/index.html
+++ b/pages/akkar/index.html
@@ -125,7 +125,8 @@
                             </div>
                           </div>
                     </a>
-                </div>     
+                </div>
+                <div class="col"><p></p></div>      
                 </div>
         
     </div>
