--- a/pages/fixire/index.html
+++ b/pages/fixire/index.html
@@ -131,6 +131,7 @@
                           </div>
                     </a>
                 </div>
+                <div class="col"><p></p></div> 
                 </div>
         
     </div>
