--- a/pages/wellbeing/index.html
+++ b/pages/wellbeing/index.html
@@ -132,7 +132,8 @@
                             </div>
                         </div>
                     </a>
-                </div>     
+                </div> 
+                <div class="col"><p></p></div>     
             </div>
         
         </div>
