--- a/pages/carolina/index.html
+++ b/pages/carolina/index.html
@@ -129,7 +129,7 @@
                           </div>
                     </a>
                 </div>
-                
+                <div class="col"><p></p></div> 
                 </div>
         
     </div>
