--- a/pages/iwa/index.html
+++ b/pages/iwa/index.html
@@ -135,7 +135,7 @@
                           </div>
                     </a>
                 </div> 
-                <div></div>    
+                <div class="col"><p></p></div>    
                 </div>
         
     </div>
