--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="col container d-flex justify-content-evenly" style="padding-top: 3%; ">
       
         <div class="container" >
-          <img src="../../assets/other/logo.png" width="130px" alt="">
+          <img src="./assets/other/logo.png" width="130px" alt="">
           <p class="fontfamily thin link" style="padding-top: 1rem;">We are a young company always
               looking for new and creative ideas
               to help you with our products in
