--- a/index.html
+++ b/index.html
@@ -226,14 +226,14 @@
               to help you with our products in
               your everday work.</p>
       </div>
-      <div class="container fontfamily thin link text-start"style="max-width: 190px;">
+      <div class="container fontfamily thin link text-start"style="max-width: 190px; font-size:11px;line-height:20px;">
               <ul>
               <a href="../../index.html" class="link" >Home</a>  
               </ul>
               <ul><a href="../../index.html/#whatwedo" class="link">What We Do</a></ul>
               <ul><a href="#portfolio" class="link">Portfolio</a></ul>
               <ul><a href="#aboutus" class="link">About Us</a></ul>
-              <ul>Contact</ul>
+              <!-- <ul>Contact</ul> -->
           
       </div>
      
@@ -243,7 +243,7 @@
       <div class="d-flex flex-row  flex-nowrap">
 
       <div class="container">
-      <div class=" fontfamily thin link"style="min-width: 230px;">
+      <div class=" fontfamily thin link"style="min-width: 130px; font-size:10px ">
           <ul>Contact
               </ul>
           <ul>Location: Addis Ababa, Ethiopia
