--- a/pages/icbu/index.html
+++ b/pages/icbu/index.html
@@ -131,7 +131,8 @@
                             </div>
                           </div>
                     </a>
-                </div>     
+                </div> 
+                <div class="col"><p></p></div>     
                 </div>
         
     </div>
