--- a/pages/wellbeing/index.html
+++ b/pages/wellbeing/index.html
@@ -20,11 +20,11 @@
                 <a class="nav-link active fontfamily thin faint link"  href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link fontfamily thin faint active link" href="../../index.html/#portfolio">Portfolio</a>
+                <a class="nav-link fontfamily thin faint active link" href="../../index.html#portfolio">Portfolio</a>
               
             </li>
             <li class="nav-item">
-              <a class="nav-link fontfamily thin faint active link" href="../../index.html/#aboutus">About Us</a>
+              <a class="nav-link fontfamily thin faint active link" href="../../index.html#aboutus">About Us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link fontfamily thin faint active link " href="#contact">Contact</a>
@@ -64,7 +64,6 @@
 
     <div class="" style="width:100%;">
 <div class="">
-
 
 <div class=" text-start" style="padding-top: 4rem;">
     <div class="row "style="padding-bottom: 3em;">
