--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       
       <ul class="nav d-flex flex-nowrap" style="margin-right: 60px;">
         <li class="nav-item">
-            <a class="nav-link active fontfamily thin faint link"  href="../../index.html">Home</a>
+            <a class="nav-link active fontfamily thin faint link"  href="#">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link fontfamily thin faint active link" href="../../index.html#portfolio">Portfolio</a>
